Add countdown and game code to Dashboard

--- a/ParmenionGame/Pages/Dashboard.cshtml
+++ b/ParmenionGame/Pages/Dashboard.cshtml
@@ -5,11 +5,8 @@
 }
 
     <div class="text-center">
-        <h1 class="display-4">Welcome</h1>
-        <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-        <input type="text" id="messageInput" />
-        <input type="button" id="sendButton" value="Send Message" />
-        <ul id="messagesList"></ul>
+        <div id="join-game-countdown"></div>
+        <div id="join-game-code"></div>
     </div>
 
 <script src="~/js/signalr/dist/browser/signalr.js"></script>
