Move countdown into its own class. Cycle through questions.

--- a/ParmenionGame/Pages/Dashboard.cshtml
+++ b/ParmenionGame/Pages/Dashboard.cshtml
@@ -7,6 +7,7 @@
     <div class="text-center">
         <div id="join-game-countdown"></div>
         <div id="join-game-code"></div>
+        <div id="question"></div>
     </div>
 
 <script src="~/js/signalr/dist/browser/signalr.js"></script>
