Connect a player to the dashboard, and display their name

--- a/ParmenionGame/Pages/Dashboard.cshtml
+++ b/ParmenionGame/Pages/Dashboard.cshtml
@@ -8,6 +8,7 @@
         <div id="join-game-countdown"></div>
         <div id="join-game-code"></div>
         <div id="question"></div>
+        <div id="player-list"></div>
     </div>
 
 <script src="~/js/signalr/dist/browser/signalr.js"></script>
