--- a/ParmenionGame/Pages/Index.cshtml
+++ b/ParmenionGame/Pages/Index.cshtml
@@ -4,13 +4,24 @@
     ViewData["Title"] = "Home page";
 }
 
-    <div class="text-center">
-        <h1 class="display-4">Welcome</h1>
-        <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-        <input type="text" id="messageInput" />
-        <input type="button" id="sendButton" value="Send Message" />
-        <ul id="messagesList"></ul>
-    </div>
+<div class="text-center" id="loading">
+    <span>Establishing connection...</span>
+</div>
+
+<div class="text-center" id="join-game-frame" style="display:none">
+    <form>
+        <div>
+            <label for="gamecode">Code</label>
+            <input required="required" id="gamecode" />
+        </div>
+
+        <div>
+            <label for="name">Name</label>
+            <input required="required" id="name" />
+        </div>
+    </form>
+    <input id="join-game-submit" type="submit" />
+</div>
 
 <script src="~/js/signalr/dist/browser/signalr.js"></script>
 <script src="~/js/game.js"></script>
