--- a/ParmenionGame/Pages/Index.cshtml
+++ b/ParmenionGame/Pages/Index.cshtml
@@ -22,6 +22,7 @@
     </form>
     <input id="join-game-submit" type="submit" />
 </div>
+<div id="incorrect-game-code" style="display: none">You have entered an incorrect game code!</div>
 
 <script src="~/js/signalr/dist/browser/signalr.js"></script>
 <script src="~/js/game.js"></script>
