stop timers when dashboard is refreshed. Adds game started check.

--- a/ParmenionGame/Pages/Dashboard.cshtml
+++ b/ParmenionGame/Pages/Dashboard.cshtml
@@ -5,7 +5,7 @@
 }
 
     <div class="text-center">
-        <div id="join-game-countdown"></div>
+        <div id="countdown"></div>
         <div id="join-game-code"></div>
         <div id="question"></div>
         <div id="player-list"></div>
