Disconnect players at the end of a game

--- a/ParmenionGame/Pages/Index.cshtml
+++ b/ParmenionGame/Pages/Index.cshtml
@@ -29,7 +29,7 @@
         </div>
     </form>
     <input id="join-game-submit" type="submit" />
-    <div id="incorrect-game-code" style="display: none" class="alert alert-warning">Invalid game code!</div>
+    <div id="incorrect-game-code" style="display: none" class="alert alert-warning text-center">Invalid game code!</div>
 </div>
 
 <script src="~/js/signalr/dist/browser/signalr.js"></script>
