Restart the game after some time

--- a/ParmenionGame/Pages/Dashboard.cshtml
+++ b/ParmenionGame/Pages/Dashboard.cshtml
@@ -6,9 +6,12 @@
 
     <div class="text-center">
         <div id="countdown"></div>
-        <div id="join-game-code"></div>
-        <div id="question"></div>
-        <div id="player-list"></div>
+        <div id="join-game-code" style="display:none"></div>
+        <div id="question" style="display:none"></div>
+        <div id="player-list" style="display:none"></div>
+        <div id="game-finished-view" style="display:none">
+            Game over
+        </div>
     </div>
 
 <script src="~/js/signalr/dist/browser/signalr.js"></script>
