--- a/ParmenionGame/Pages/Dashboard.cshtml
+++ b/ParmenionGame/Pages/Dashboard.cshtml
@@ -4,15 +4,22 @@
     ViewData["Title"] = "Home page";
 }
 
-    <div class="text-center">
-        <div id="countdown"></div>
-        <div id="join-game-code" style="display:none"></div>
-        <div id="question" style="display:none"></div>
-        <div id="player-list" style="display:none"></div>
-        <div id="game-finished-view" style="display:none">
-            Game over
-        </div>
+<div class="text-center" id="countdown"></div>
+<div class="text-center" id="game-ready">
+    <div id="join-game-code"></div>
+    <div id="player-list"></div>
+</div>
+
+<div class="text-center" id="game-progress" style="display:none">
+    <div id="question"></div>
+</div>
+
+<div class="text-center" id="game-over" style="display:none">
+    <div id="player-list"></div>
+    <div id="game-finished-view">
+        Game over
     </div>
+</div>
 
 <script src="~/js/signalr/dist/browser/signalr.js"></script>
 <script src="~/js/dashboard.js"></script>
