--- a/ParmenionGame/Pages/Dashboard.cshtml
+++ b/ParmenionGame/Pages/Dashboard.cshtml
@@ -21,5 +21,7 @@
     </div>
 </div>
 
+<img src="~/images/qr-code.png" style="width: 300px; height: 300px" />
+
 <script src="~/js/signalr/dist/browser/signalr.js"></script>
 <script src="~/js/dashboard.js"></script>
