--- a/ParmenionGame/Pages/Index.cshtml
+++ b/ParmenionGame/Pages/Index.cshtml
@@ -32,5 +32,8 @@
     <div id="incorrect-game-code" style="display: none" class="alert alert-warning text-center">Invalid game code!</div>
 </div>
 
+<div class="text-center" id="answers-view" style="display:none">
+</div>
+
 <script src="~/js/signalr/dist/browser/signalr.js"></script>
 <script src="~/js/player.js"></script>
