Update styling for Dashboard

--- a/ParmenionGame/Pages/Index.cshtml
+++ b/ParmenionGame/Pages/Index.cshtml
@@ -13,19 +13,21 @@
 </div>
 
 <div class="text-center" id="waiting-next-game-view" style="display:none">
-    Please wait for the next game to begin
+    <span>Please wait for the next game to begin</span>
+
+    <span><a href="https://www.parmenioncareers.co.uk/jobs.asp">Check out our vacancies</a></span>
 </div>
 
 <div class="text-center" id="join-game-view" style="display:none">
     <form>
         <div>
             <label for="gamecode">Enter 3 letter game code:</label>
-            <input required="required" id="gamecode" pattern="[A-Za-z]{3}" />
+            <input required="required" id="gamecode" style="text-transform:uppercase" pattern="[A-Za-z]{3}" />
         </div>
 
         <div>
             <label for="name">Name</label>
-            <input required="required" id="name" />
+            <input required="required" style="text-transform:uppercase" id="name" />
         </div>
     </form>
     <input id="join-game-submit" type="submit" />
