--- a/ParmenionGame/Pages/Shared/_Layout.cshtml
+++ b/ParmenionGame/Pages/Shared/_Layout.cshtml
@@ -10,8 +10,8 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <div class="container">
-        <main role="main" class="pb-3">
+    <div id="container">
+        <main role="main">
             @RenderBody()
         </main>
     </div>
