--- a/ParmenionGame/Pages/Dashboard.cshtml
+++ b/ParmenionGame/Pages/Dashboard.cshtml
@@ -4,24 +4,76 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center" id="countdown"></div>
-<div class="text-center" id="game-ready">
-    <div id="join-game-code"></div>
-    <div id="player-list"></div>
-</div>
+<div id="dashboard-view">
+    <div class="text-center" id="game-ready">
+        <div class="row ml-0 mr-0" id="game-header">
+            <div class="col-md-1"></div>
+            <div class="col-md-2">
+                <span>Next game:</span>
+                <div class="countdown"></div>
+            </div>
+            <div id="logo" class="col-md-6"><span class="big">GAME</span> <span class="mini">OF</span> <span class="big">PENSIONS</span></div>
+            <div class="col-md-3"></div>
+        </div>
+        <div class="row ml-0 mr-0" id="game-ready-1">
+            <div class="col-md-4">
+                <img id="join-qr" src="~/images/qr-code.png" />
+            </div>
+            <div class="col-md-4 player-list"></div>
+            <div class="col-md-4"></div>
+        </div>
+        <div class="row ml-0 mr-0" id="game-ready-2">
+            <div class="col-md-1"></div>
+            <div class="col-md-4">
+                <span>Join at http://gop.openwebpages.co.uk</span>
+            </div>
+            <div class="col-md-3"></div>
+            <div class="col-md-2">
+                <span>Code:</span>
+                <span id="join-game-code"></span>
+            </div>
+            <div class="col-md-2"></div>
+        </div>
+    </div>
 
-<div class="text-center" id="game-progress" style="display:none">
-    <div id="question"></div>
-</div>
+    <div class="text-center" id="game-progress" style="display:none">
+        <div class="row ml-0 mr-0" id="game-header">
+            <div class="col-md-1"></div>
+            <div class="col-md-2">
+                <div class="countdown"></div>
+            </div>
+            <div id="logo" class="col-md-6"><span class="big">GAME</span> <span class="mini">OF</span> <span class="big">PENSIONS</span></div>
+            <div class="col-md-3"></div>
+        </div>
+        <div class="row ml-0 mr-0">
+            <div class="col-md-2"></div>
+            <div class="col-md-4" id="question"></div>
+            <div class="col-md-4">
+                <div><u>Leaderboard</u></div>
+                <div class="player-list"></div>
+            </div>
+            <div class="col-md-2"></div>
+        </div>
+    </div>
 
-<div class="text-center" id="game-over" style="display:none">
-    <div id="player-list"></div>
-    <div id="game-finished-view">
-        Game over
+    <div class="text-center" id="game-over" style="display:none">
+        <div class="row ml-0 mr-0" id="game-header">
+            <div class="col-md-1"></div>
+            <div class="col-md-2">
+                <span>Restarting:</span>
+                <div class="countdown"></div>
+            </div>
+            <div id="logo" class="col-md-6"><span class="big">GAME</span> <span class="mini">OF</span> <span class="big">PENSIONS</span></div>
+            <div class="col-md-3"></div>
+        </div>
+        <div><u>Results</u></div>
+        <div class="player-list"></div>
+        <div id="game-finished-view">
+            Game over
+        </div>
     </div>
 </div>
 
-<img src="~/images/qr-code.png" style="width: 300px; height: 300px" />
 
 <script src="~/js/signalr/dist/browser/signalr.js"></script>
 <script src="~/js/dashboard.js"></script>
