Acknowledge successful player registration

--- a/ParmenionGame/Pages/Index.cshtml
+++ b/ParmenionGame/Pages/Index.cshtml
@@ -32,6 +32,10 @@
     <div id="incorrect-game-code" style="display: none" class="alert alert-warning text-center">Invalid game code!</div>
 </div>
 
+<div id="join-game-success" class="alert alert-success" role="alert" style="display:none">
+    Code accepted. The game will begin soon.
+</div>
+
 <div class="text-center" id="answers-view" style="display:none">
 </div>
 
