Add game logic for caluclating net worth

--- a/ParmenionGame/Pages/Dashboard.cshtml
+++ b/ParmenionGame/Pages/Dashboard.cshtml
@@ -67,7 +67,20 @@
             <div class="col-md-3"></div>
         </div>
         <div><u>Results</u></div>
-        <div class="player-list"></div>
+        <table>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Savings</th>
+                    <th>Property</th>
+                    <th>Pension Pot</th>
+                    <th>Net Worth</th>
+                </tr>
+            </thead>
+            <tbody id="player-results">
+
+            </tbody>
+        </table>
         <div id="game-finished-view">
             Game over
         </div>
