Adjust dashboard layouts

--- a/ParmenionGame/wwwroot/css/site.css
+++ b/ParmenionGame/wwwroot/css/site.css
@@ -110,6 +110,14 @@ body {
     height: 15vh;
 }
 
+#game-body {
+    height: 75vh;
+}
+
+#game-footer {
+    height: 10vh;
+}
+
 #game-ready-1 {
     height: 55vh;
 }
