Show prompts about Parmenion benefits to the dashboard

--- a/ParmenionGame/Pages/Dashboard.cshtml
+++ b/ParmenionGame/Pages/Dashboard.cshtml
@@ -47,7 +47,10 @@
         </div>
         <div class="row ml-0 mr-0" id="game-body">
             <div class="col-md-2"></div>
-            <div class="col-md-8" id="question"></div>
+            <div class="col-md-8">
+                <div id="question"></div>
+                <div class="text-center" id="prompt"></div>
+            </div>
             <div class="col-md-2"></div>
         </div>
         <div class="row ml-0 mr-0" id="game-footer">
