Display player age on dashboard

--- a/ParmenionGame/Pages/Dashboard.cshtml
+++ b/ParmenionGame/Pages/Dashboard.cshtml
@@ -43,7 +43,11 @@
                 <div class="countdown"></div>
             </div>
             <div id="logo" class="col-md-6"><span class="big">GAME</span> <span class="mini">OF</span> <span class="big">PENSIONS</span></div>
-            <div class="col-md-3"></div>
+            <div class="col-md-2 text-center">
+                <div style="width:100%">Age</div>
+                <div id="player-age"></div>
+            </div>
+            <div class="col-md-1"></div>
         </div>
         <div class="row ml-0 mr-0" id="game-body">
             <div class="col-md-2"></div>
